exports[`js-nm-individually 1`] = `
{
  "hello": "import { http } from 'framework';\\nimport handlerFn from './handler.js';\\n\\nexport const handler = http(handlerFn);\\n"
}
`;

exports[`js-nm-individually 2`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/hello",
  "file handlers/hello/handler.js",
  "file handlers/hello/index.js",
  "file handlers/hello/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`js-nm-individually 3`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`js-nm-individually 4`] = `
{
  "world": "import { http } from 'framework';\\nimport handlerFn from '../handler/index.js';\\n\\nexport const handler = http(handlerFn);\\n"
}
`;

exports[`js-nm-individually 5`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/handler",
  "file handlers/handler/index.js",
  "directory handlers/world",
  "file handlers/world/index.js",
  "file handlers/world/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`js-nm-individually 6`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`js-nm-single 1`] = `
{
  "hello": "import { http } from 'framework';\\nimport handlerFn from './handler.js';\\n\\nexport const handler = http(handlerFn);\\n",
  "world": "import { http } from 'framework';\\nimport handlerFn from '../handler/index.js';\\n\\nexport const handler = http(handlerFn);\\n"
}
`;

exports[`js-nm-single 2`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/handler",
  "file handlers/handler/index.js",
  "directory handlers/hello",
  "file handlers/hello/handler.js",
  "file handlers/hello/index.js",
  "file handlers/hello/package.json",
  "directory handlers/world",
  "file handlers/world/index.js",
  "file handlers/world/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`js-nm-single 3`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`js-nm-single 4`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`js-pnp-individually 1`] = `
{
  "hello": "import { http } from 'framework';\\nimport handlerFn from './handler.js';\\n\\nexport const handler = http(handlerFn);\\n"
}
`;

exports[`js-pnp-individually 2`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/hello",
  "file handlers/hello/handler.js",
  "file handlers/hello/index.js",
  "file handlers/hello/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`js-pnp-individually 3`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`js-pnp-individually 4`] = `
{
  "world": "import { http } from 'framework';\\nimport handlerFn from '../handler/index.js';\\n\\nexport const handler = http(handlerFn);\\n"
}
`;

exports[`js-pnp-individually 5`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/handler",
  "file handlers/handler/index.js",
  "directory handlers/world",
  "file handlers/world/index.js",
  "file handlers/world/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`js-pnp-individually 6`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`js-pnp-single 1`] = `
{
  "hello": "import { http } from 'framework';\\nimport handlerFn from './handler.js';\\n\\nexport const handler = http(handlerFn);\\n",
  "world": "import { http } from 'framework';\\nimport handlerFn from '../handler/index.js';\\n\\nexport const handler = http(handlerFn);\\n"
}
`;

exports[`js-pnp-single 2`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/handler",
  "file handlers/handler/index.js",
  "directory handlers/hello",
  "file handlers/hello/handler.js",
  "file handlers/hello/index.js",
  "file handlers/hello/package.json",
  "directory handlers/world",
  "file handlers/world/index.js",
  "file handlers/world/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`js-pnp-single 3`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`js-pnp-single 4`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`ts-nm-individually 1`] = `
{
  "hello": "\\"use strict\\";\\nvar __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    var desc = Object.getOwnPropertyDescriptor(m, k);\\n    if (!desc || (\\"get\\" in desc ? !m.__esModule : desc.writable || desc.configurable)) {\\n      desc = { enumerable: true, get: function() { return m[k]; } };\\n    }\\n    Object.defineProperty(o, k2, desc);\\n}) : (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    o[k2] = m[k];\\n}));\\nvar __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {\\n    Object.defineProperty(o, \\"default\\", { enumerable: true, value: v });\\n}) : function(o, v) {\\n    o[\\"default\\"] = v;\\n});\\nvar __importStar = (this && this.__importStar) || (function () {\\n    var ownKeys = function(o) {\\n        ownKeys = Object.getOwnPropertyNames || function (o) {\\n            var ar = [];\\n            for (var k in o) if (Object.prototype.hasOwnProperty.call(o, k)) ar[ar.length] = k;\\n            return ar;\\n        };\\n        return ownKeys(o);\\n    };\\n    return function (mod) {\\n        if (mod && mod.__esModule) return mod;\\n        var result = {};\\n        if (mod != null) for (var k = ownKeys(mod), i = 0; i < k.length; i++) if (k[i] !== \\"default\\") __createBinding(result, mod, k[i]);\\n        __setModuleDefault(result, mod);\\n        return result;\\n    };\\n})();\\nvar __importDefault = (this && this.__importDefault) || function (mod) {\\n    return (mod && mod.__esModule) ? mod : { \\"default\\": mod };\\n};\\nObject.defineProperty(exports, \\"__esModule\\", { value: true });\\nexports.handler = void 0;\\nconst lambda = __importStar(require(\\"framework\\"));\\nconst handler_1 = __importDefault(require(\\"./handler\\"));\\nexports.handler = lambda.http(handler_1.default);\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOzs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7QUFDQSxrREFBb0M7QUFDcEMsd0RBQStCO0FBRWxCLFFBQUEsT0FBTyxHQUEyQixNQUFNLENBQUMsSUFBSSxDQUFDLGlCQUFNLENBQUMsQ0FBQyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB0eXBlIHsgQVBJR2F0ZXdheVByb3h5SGFuZGxlciB9IGZyb20gJ2F3cy1sYW1iZGEnO1xuaW1wb3J0ICogYXMgbGFtYmRhIGZyb20gJ2ZyYW1ld29yayc7XG5pbXBvcnQgaGFuZGxlIGZyb20gJy4vaGFuZGxlcic7XG5cbmV4cG9ydCBjb25zdCBoYW5kbGVyOiBBUElHYXRld2F5UHJveHlIYW5kbGVyID0gbGFtYmRhLmh0dHAoaGFuZGxlKTtcbiJdfQ=="
}
`;

exports[`ts-nm-individually 2`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/hello",
  "file handlers/hello/handler.js",
  "file handlers/hello/index.js",
  "file handlers/hello/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`ts-nm-individually 3`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`ts-nm-individually 4`] = `
{
  "world": "\\"use strict\\";\\nvar __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    var desc = Object.getOwnPropertyDescriptor(m, k);\\n    if (!desc || (\\"get\\" in desc ? !m.__esModule : desc.writable || desc.configurable)) {\\n      desc = { enumerable: true, get: function() { return m[k]; } };\\n    }\\n    Object.defineProperty(o, k2, desc);\\n}) : (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    o[k2] = m[k];\\n}));\\nvar __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {\\n    Object.defineProperty(o, \\"default\\", { enumerable: true, value: v });\\n}) : function(o, v) {\\n    o[\\"default\\"] = v;\\n});\\nvar __importStar = (this && this.__importStar) || (function () {\\n    var ownKeys = function(o) {\\n        ownKeys = Object.getOwnPropertyNames || function (o) {\\n            var ar = [];\\n            for (var k in o) if (Object.prototype.hasOwnProperty.call(o, k)) ar[ar.length] = k;\\n            return ar;\\n        };\\n        return ownKeys(o);\\n    };\\n    return function (mod) {\\n        if (mod && mod.__esModule) return mod;\\n        var result = {};\\n        if (mod != null) for (var k = ownKeys(mod), i = 0; i < k.length; i++) if (k[i] !== \\"default\\") __createBinding(result, mod, k[i]);\\n        __setModuleDefault(result, mod);\\n        return result;\\n    };\\n})();\\nvar __importDefault = (this && this.__importDefault) || function (mod) {\\n    return (mod && mod.__esModule) ? mod : { \\"default\\": mod };\\n};\\nObject.defineProperty(exports, \\"__esModule\\", { value: true });\\nexports.handler = void 0;\\nconst lambda = __importStar(require(\\"framework\\"));\\nconst handler_1 = __importDefault(require(\\"../handler\\"));\\nexports.handler = lambda.http(handler_1.default);\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOzs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7QUFDQSxrREFBb0M7QUFDcEMseURBQWdDO0FBRW5CLFFBQUEsT0FBTyxHQUEyQixNQUFNLENBQUMsSUFBSSxDQUFDLGlCQUFNLENBQUMsQ0FBQyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB0eXBlIHsgQVBJR2F0ZXdheVByb3h5SGFuZGxlciB9IGZyb20gJ2F3cy1sYW1iZGEnO1xuaW1wb3J0ICogYXMgbGFtYmRhIGZyb20gJ2ZyYW1ld29yayc7XG5pbXBvcnQgaGFuZGxlIGZyb20gJy4uL2hhbmRsZXInO1xuXG5leHBvcnQgY29uc3QgaGFuZGxlcjogQVBJR2F0ZXdheVByb3h5SGFuZGxlciA9IGxhbWJkYS5odHRwKGhhbmRsZSk7XG4iXX0="
}
`;

exports[`ts-nm-individually 5`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/handler",
  "file handlers/handler/index.js",
  "directory handlers/world",
  "file handlers/world/index.js",
  "file handlers/world/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`ts-nm-individually 6`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`ts-nm-single 1`] = `
{
  "hello": "\\"use strict\\";\\nvar __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    var desc = Object.getOwnPropertyDescriptor(m, k);\\n    if (!desc || (\\"get\\" in desc ? !m.__esModule : desc.writable || desc.configurable)) {\\n      desc = { enumerable: true, get: function() { return m[k]; } };\\n    }\\n    Object.defineProperty(o, k2, desc);\\n}) : (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    o[k2] = m[k];\\n}));\\nvar __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {\\n    Object.defineProperty(o, \\"default\\", { enumerable: true, value: v });\\n}) : function(o, v) {\\n    o[\\"default\\"] = v;\\n});\\nvar __importStar = (this && this.__importStar) || (function () {\\n    var ownKeys = function(o) {\\n        ownKeys = Object.getOwnPropertyNames || function (o) {\\n            var ar = [];\\n            for (var k in o) if (Object.prototype.hasOwnProperty.call(o, k)) ar[ar.length] = k;\\n            return ar;\\n        };\\n        return ownKeys(o);\\n    };\\n    return function (mod) {\\n        if (mod && mod.__esModule) return mod;\\n        var result = {};\\n        if (mod != null) for (var k = ownKeys(mod), i = 0; i < k.length; i++) if (k[i] !== \\"default\\") __createBinding(result, mod, k[i]);\\n        __setModuleDefault(result, mod);\\n        return result;\\n    };\\n})();\\nvar __importDefault = (this && this.__importDefault) || function (mod) {\\n    return (mod && mod.__esModule) ? mod : { \\"default\\": mod };\\n};\\nObject.defineProperty(exports, \\"__esModule\\", { value: true });\\nexports.handler = void 0;\\nconst lambda = __importStar(require(\\"framework\\"));\\nconst handler_1 = __importDefault(require(\\"./handler\\"));\\nexports.handler = lambda.http(handler_1.default);\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOzs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7QUFDQSxrREFBb0M7QUFDcEMsd0RBQStCO0FBRWxCLFFBQUEsT0FBTyxHQUEyQixNQUFNLENBQUMsSUFBSSxDQUFDLGlCQUFNLENBQUMsQ0FBQyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB0eXBlIHsgQVBJR2F0ZXdheVByb3h5SGFuZGxlciB9IGZyb20gJ2F3cy1sYW1iZGEnO1xuaW1wb3J0ICogYXMgbGFtYmRhIGZyb20gJ2ZyYW1ld29yayc7XG5pbXBvcnQgaGFuZGxlIGZyb20gJy4vaGFuZGxlcic7XG5cbmV4cG9ydCBjb25zdCBoYW5kbGVyOiBBUElHYXRld2F5UHJveHlIYW5kbGVyID0gbGFtYmRhLmh0dHAoaGFuZGxlKTtcbiJdfQ==",
  "world": "\\"use strict\\";\\nvar __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    var desc = Object.getOwnPropertyDescriptor(m, k);\\n    if (!desc || (\\"get\\" in desc ? !m.__esModule : desc.writable || desc.configurable)) {\\n      desc = { enumerable: true, get: function() { return m[k]; } };\\n    }\\n    Object.defineProperty(o, k2, desc);\\n}) : (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    o[k2] = m[k];\\n}));\\nvar __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {\\n    Object.defineProperty(o, \\"default\\", { enumerable: true, value: v });\\n}) : function(o, v) {\\n    o[\\"default\\"] = v;\\n});\\nvar __importStar = (this && this.__importStar) || (function () {\\n    var ownKeys = function(o) {\\n        ownKeys = Object.getOwnPropertyNames || function (o) {\\n            var ar = [];\\n            for (var k in o) if (Object.prototype.hasOwnProperty.call(o, k)) ar[ar.length] = k;\\n            return ar;\\n        };\\n        return ownKeys(o);\\n    };\\n    return function (mod) {\\n        if (mod && mod.__esModule) return mod;\\n        var result = {};\\n        if (mod != null) for (var k = ownKeys(mod), i = 0; i < k.length; i++) if (k[i] !== \\"default\\") __createBinding(result, mod, k[i]);\\n        __setModuleDefault(result, mod);\\n        return result;\\n    };\\n})();\\nvar __importDefault = (this && this.__importDefault) || function (mod) {\\n    return (mod && mod.__esModule) ? mod : { \\"default\\": mod };\\n};\\nObject.defineProperty(exports, \\"__esModule\\", { value: true });\\nexports.handler = void 0;\\nconst lambda = __importStar(require(\\"framework\\"));\\nconst handler_1 = __importDefault(require(\\"../handler\\"));\\nexports.handler = lambda.http(handler_1.default);\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOzs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7QUFDQSxrREFBb0M7QUFDcEMseURBQWdDO0FBRW5CLFFBQUEsT0FBTyxHQUEyQixNQUFNLENBQUMsSUFBSSxDQUFDLGlCQUFNLENBQUMsQ0FBQyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB0eXBlIHsgQVBJR2F0ZXdheVByb3h5SGFuZGxlciB9IGZyb20gJ2F3cy1sYW1iZGEnO1xuaW1wb3J0ICogYXMgbGFtYmRhIGZyb20gJ2ZyYW1ld29yayc7XG5pbXBvcnQgaGFuZGxlIGZyb20gJy4uL2hhbmRsZXInO1xuXG5leHBvcnQgY29uc3QgaGFuZGxlcjogQVBJR2F0ZXdheVByb3h5SGFuZGxlciA9IGxhbWJkYS5odHRwKGhhbmRsZSk7XG4iXX0="
}
`;

exports[`ts-nm-single 2`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/handler",
  "file handlers/handler/index.js",
  "directory handlers/hello",
  "file handlers/hello/handler.js",
  "file handlers/hello/index.js",
  "file handlers/hello/package.json",
  "directory handlers/world",
  "file handlers/world/index.js",
  "file handlers/world/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`ts-nm-single 3`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`ts-nm-single 4`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`ts-pnp-individually 1`] = `
{
  "hello": "\\"use strict\\";\\nvar __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    var desc = Object.getOwnPropertyDescriptor(m, k);\\n    if (!desc || (\\"get\\" in desc ? !m.__esModule : desc.writable || desc.configurable)) {\\n      desc = { enumerable: true, get: function() { return m[k]; } };\\n    }\\n    Object.defineProperty(o, k2, desc);\\n}) : (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    o[k2] = m[k];\\n}));\\nvar __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {\\n    Object.defineProperty(o, \\"default\\", { enumerable: true, value: v });\\n}) : function(o, v) {\\n    o[\\"default\\"] = v;\\n});\\nvar __importStar = (this && this.__importStar) || (function () {\\n    var ownKeys = function(o) {\\n        ownKeys = Object.getOwnPropertyNames || function (o) {\\n            var ar = [];\\n            for (var k in o) if (Object.prototype.hasOwnProperty.call(o, k)) ar[ar.length] = k;\\n            return ar;\\n        };\\n        return ownKeys(o);\\n    };\\n    return function (mod) {\\n        if (mod && mod.__esModule) return mod;\\n        var result = {};\\n        if (mod != null) for (var k = ownKeys(mod), i = 0; i < k.length; i++) if (k[i] !== \\"default\\") __createBinding(result, mod, k[i]);\\n        __setModuleDefault(result, mod);\\n        return result;\\n    };\\n})();\\nvar __importDefault = (this && this.__importDefault) || function (mod) {\\n    return (mod && mod.__esModule) ? mod : { \\"default\\": mod };\\n};\\nObject.defineProperty(exports, \\"__esModule\\", { value: true });\\nexports.handler = void 0;\\nconst lambda = __importStar(require(\\"framework\\"));\\nconst handler_1 = __importDefault(require(\\"./handler\\"));\\nexports.handler = lambda.http(handler_1.default);\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOzs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7QUFDQSxrREFBb0M7QUFDcEMsd0RBQStCO0FBRWxCLFFBQUEsT0FBTyxHQUEyQixNQUFNLENBQUMsSUFBSSxDQUFDLGlCQUFNLENBQUMsQ0FBQyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB0eXBlIHsgQVBJR2F0ZXdheVByb3h5SGFuZGxlciB9IGZyb20gJ2F3cy1sYW1iZGEnO1xuaW1wb3J0ICogYXMgbGFtYmRhIGZyb20gJ2ZyYW1ld29yayc7XG5pbXBvcnQgaGFuZGxlIGZyb20gJy4vaGFuZGxlcic7XG5cbmV4cG9ydCBjb25zdCBoYW5kbGVyOiBBUElHYXRld2F5UHJveHlIYW5kbGVyID0gbGFtYmRhLmh0dHAoaGFuZGxlKTtcbiJdfQ=="
}
`;

exports[`ts-pnp-individually 2`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/hello",
  "file handlers/hello/handler.js",
  "file handlers/hello/index.js",
  "file handlers/hello/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`ts-pnp-individually 3`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`ts-pnp-individually 4`] = `
{
  "world": "\\"use strict\\";\\nvar __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    var desc = Object.getOwnPropertyDescriptor(m, k);\\n    if (!desc || (\\"get\\" in desc ? !m.__esModule : desc.writable || desc.configurable)) {\\n      desc = { enumerable: true, get: function() { return m[k]; } };\\n    }\\n    Object.defineProperty(o, k2, desc);\\n}) : (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    o[k2] = m[k];\\n}));\\nvar __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {\\n    Object.defineProperty(o, \\"default\\", { enumerable: true, value: v });\\n}) : function(o, v) {\\n    o[\\"default\\"] = v;\\n});\\nvar __importStar = (this && this.__importStar) || (function () {\\n    var ownKeys = function(o) {\\n        ownKeys = Object.getOwnPropertyNames || function (o) {\\n            var ar = [];\\n            for (var k in o) if (Object.prototype.hasOwnProperty.call(o, k)) ar[ar.length] = k;\\n            return ar;\\n        };\\n        return ownKeys(o);\\n    };\\n    return function (mod) {\\n        if (mod && mod.__esModule) return mod;\\n        var result = {};\\n        if (mod != null) for (var k = ownKeys(mod), i = 0; i < k.length; i++) if (k[i] !== \\"default\\") __createBinding(result, mod, k[i]);\\n        __setModuleDefault(result, mod);\\n        return result;\\n    };\\n})();\\nvar __importDefault = (this && this.__importDefault) || function (mod) {\\n    return (mod && mod.__esModule) ? mod : { \\"default\\": mod };\\n};\\nObject.defineProperty(exports, \\"__esModule\\", { value: true });\\nexports.handler = void 0;\\nconst lambda = __importStar(require(\\"framework\\"));\\nconst handler_1 = __importDefault(require(\\"../handler\\"));\\nexports.handler = lambda.http(handler_1.default);\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOzs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7QUFDQSxrREFBb0M7QUFDcEMseURBQWdDO0FBRW5CLFFBQUEsT0FBTyxHQUEyQixNQUFNLENBQUMsSUFBSSxDQUFDLGlCQUFNLENBQUMsQ0FBQyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB0eXBlIHsgQVBJR2F0ZXdheVByb3h5SGFuZGxlciB9IGZyb20gJ2F3cy1sYW1iZGEnO1xuaW1wb3J0ICogYXMgbGFtYmRhIGZyb20gJ2ZyYW1ld29yayc7XG5pbXBvcnQgaGFuZGxlIGZyb20gJy4uL2hhbmRsZXInO1xuXG5leHBvcnQgY29uc3QgaGFuZGxlcjogQVBJR2F0ZXdheVByb3h5SGFuZGxlciA9IGxhbWJkYS5odHRwKGhhbmRsZSk7XG4iXX0="
}
`;

exports[`ts-pnp-individually 5`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/handler",
  "file handlers/handler/index.js",
  "directory handlers/world",
  "file handlers/world/index.js",
  "file handlers/world/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`ts-pnp-individually 6`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`ts-pnp-single 1`] = `
{
  "hello": "\\"use strict\\";\\nvar __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    var desc = Object.getOwnPropertyDescriptor(m, k);\\n    if (!desc || (\\"get\\" in desc ? !m.__esModule : desc.writable || desc.configurable)) {\\n      desc = { enumerable: true, get: function() { return m[k]; } };\\n    }\\n    Object.defineProperty(o, k2, desc);\\n}) : (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    o[k2] = m[k];\\n}));\\nvar __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {\\n    Object.defineProperty(o, \\"default\\", { enumerable: true, value: v });\\n}) : function(o, v) {\\n    o[\\"default\\"] = v;\\n});\\nvar __importStar = (this && this.__importStar) || (function () {\\n    var ownKeys = function(o) {\\n        ownKeys = Object.getOwnPropertyNames || function (o) {\\n            var ar = [];\\n            for (var k in o) if (Object.prototype.hasOwnProperty.call(o, k)) ar[ar.length] = k;\\n            return ar;\\n        };\\n        return ownKeys(o);\\n    };\\n    return function (mod) {\\n        if (mod && mod.__esModule) return mod;\\n        var result = {};\\n        if (mod != null) for (var k = ownKeys(mod), i = 0; i < k.length; i++) if (k[i] !== \\"default\\") __createBinding(result, mod, k[i]);\\n        __setModuleDefault(result, mod);\\n        return result;\\n    };\\n})();\\nvar __importDefault = (this && this.__importDefault) || function (mod) {\\n    return (mod && mod.__esModule) ? mod : { \\"default\\": mod };\\n};\\nObject.defineProperty(exports, \\"__esModule\\", { value: true });\\nexports.handler = void 0;\\nconst lambda = __importStar(require(\\"framework\\"));\\nconst handler_1 = __importDefault(require(\\"./handler\\"));\\nexports.handler = lambda.http(handler_1.default);\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOzs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7QUFDQSxrREFBb0M7QUFDcEMsd0RBQStCO0FBRWxCLFFBQUEsT0FBTyxHQUEyQixNQUFNLENBQUMsSUFBSSxDQUFDLGlCQUFNLENBQUMsQ0FBQyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB0eXBlIHsgQVBJR2F0ZXdheVByb3h5SGFuZGxlciB9IGZyb20gJ2F3cy1sYW1iZGEnO1xuaW1wb3J0ICogYXMgbGFtYmRhIGZyb20gJ2ZyYW1ld29yayc7XG5pbXBvcnQgaGFuZGxlIGZyb20gJy4vaGFuZGxlcic7XG5cbmV4cG9ydCBjb25zdCBoYW5kbGVyOiBBUElHYXRld2F5UHJveHlIYW5kbGVyID0gbGFtYmRhLmh0dHAoaGFuZGxlKTtcbiJdfQ==",
  "world": "\\"use strict\\";\\nvar __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    var desc = Object.getOwnPropertyDescriptor(m, k);\\n    if (!desc || (\\"get\\" in desc ? !m.__esModule : desc.writable || desc.configurable)) {\\n      desc = { enumerable: true, get: function() { return m[k]; } };\\n    }\\n    Object.defineProperty(o, k2, desc);\\n}) : (function(o, m, k, k2) {\\n    if (k2 === undefined) k2 = k;\\n    o[k2] = m[k];\\n}));\\nvar __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {\\n    Object.defineProperty(o, \\"default\\", { enumerable: true, value: v });\\n}) : function(o, v) {\\n    o[\\"default\\"] = v;\\n});\\nvar __importStar = (this && this.__importStar) || (function () {\\n    var ownKeys = function(o) {\\n        ownKeys = Object.getOwnPropertyNames || function (o) {\\n            var ar = [];\\n            for (var k in o) if (Object.prototype.hasOwnProperty.call(o, k)) ar[ar.length] = k;\\n            return ar;\\n        };\\n        return ownKeys(o);\\n    };\\n    return function (mod) {\\n        if (mod && mod.__esModule) return mod;\\n        var result = {};\\n        if (mod != null) for (var k = ownKeys(mod), i = 0; i < k.length; i++) if (k[i] !== \\"default\\") __createBinding(result, mod, k[i]);\\n        __setModuleDefault(result, mod);\\n        return result;\\n    };\\n})();\\nvar __importDefault = (this && this.__importDefault) || function (mod) {\\n    return (mod && mod.__esModule) ? mod : { \\"default\\": mod };\\n};\\nObject.defineProperty(exports, \\"__esModule\\", { value: true });\\nexports.handler = void 0;\\nconst lambda = __importStar(require(\\"framework\\"));\\nconst handler_1 = __importDefault(require(\\"../handler\\"));\\nexports.handler = lambda.http(handler_1.default);\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOzs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7QUFDQSxrREFBb0M7QUFDcEMseURBQWdDO0FBRW5CLFFBQUEsT0FBTyxHQUEyQixNQUFNLENBQUMsSUFBSSxDQUFDLGlCQUFNLENBQUMsQ0FBQyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB0eXBlIHsgQVBJR2F0ZXdheVByb3h5SGFuZGxlciB9IGZyb20gJ2F3cy1sYW1iZGEnO1xuaW1wb3J0ICogYXMgbGFtYmRhIGZyb20gJ2ZyYW1ld29yayc7XG5pbXBvcnQgaGFuZGxlIGZyb20gJy4uL2hhbmRsZXInO1xuXG5leHBvcnQgY29uc3QgaGFuZGxlcjogQVBJR2F0ZXdheVByb3h5SGFuZGxlciA9IGxhbWJkYS5odHRwKGhhbmRsZSk7XG4iXX0="
}
`;

exports[`ts-pnp-single 2`] = `
[
  "directory framework",
  "file framework/index.js",
  "file framework/package.json",
  "directory handlers",
  "directory handlers/handler",
  "file handlers/handler/index.js",
  "directory handlers/hello",
  "file handlers/hello/handler.js",
  "file handlers/hello/index.js",
  "file handlers/hello/package.json",
  "directory handlers/world",
  "file handlers/world/index.js",
  "file handlers/world/package.json",
  "directory node_modules",
  "directory node_modules/@hapi",
  "directory node_modules/@hapi/boom",
  "directory node_modules/@hapi/boom/lib",
  "file node_modules/@hapi/boom/lib/index.js",
  "directory node_modules/@hapi/boom/node_modules",
  "directory node_modules/@hapi/boom/node_modules/@hapi",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek",
  "directory node_modules/@hapi/boom/node_modules/@hapi/hoek/lib",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/applyToDefaults.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/assert.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/bench.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/block.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/clone.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/contain.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/deepEqual.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/error.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeHtml.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeJson.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/escapeRegex.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/flatten.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/ignore.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/index.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/intersect.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/isPromise.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/merge.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/once.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reach.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/reachTemplate.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/stringify.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/types.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/utils.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/lib/wait.js",
  "file node_modules/@hapi/boom/node_modules/@hapi/hoek/package.json",
  "file node_modules/@hapi/boom/package.json",
  "directory node_modules/@hapi/bourne",
  "directory node_modules/@hapi/bourne/lib",
  "file node_modules/@hapi/bourne/lib/index.js",
  "file node_modules/@hapi/bourne/package.json",
  "directory node_modules/apr-intercept",
  "directory node_modules/apr-intercept/dist",
  "file node_modules/apr-intercept/dist/apr-intercept.umd.js",
  "file node_modules/apr-intercept/package.json",
  "directory node_modules/debug",
  "file node_modules/debug/package.json",
  "directory node_modules/debug/src",
  "file node_modules/debug/src/browser.js",
  "file node_modules/debug/src/common.js",
  "file node_modules/debug/src/index.js",
  "file node_modules/debug/src/node.js",
  "directory node_modules/framework-> ../framework",
  "file node_modules/framework/index.js-> ../../framework/index.js",
  "file node_modules/framework/package.json-> ../../framework/package.json",
  "directory node_modules/has-flag",
  "file node_modules/has-flag/index.js",
  "file node_modules/has-flag/package.json",
  "directory node_modules/ms",
  "file node_modules/ms/index.js",
  "file node_modules/ms/package.json",
  "directory node_modules/out-> ../out",
  "file node_modules/out/index.js-> ../../out/index.js",
  "file node_modules/out/package.json-> ../../out/package.json",
  "directory node_modules/supports-color",
  "file node_modules/supports-color/index.js",
  "file node_modules/supports-color/package.json",
  "directory out",
  "file out/index.js",
  "file out/package.json",
  "file package.json"
]
`;

exports[`ts-pnp-single 3`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;

exports[`ts-pnp-single 4`] = `
{
  "statusCode": 200,
  "headers": {
    "content-type": "application/json"
  }
}
`;
